[package]
name = "bondings"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

winit = "0.27.1"
wgpu = "0.14.0"

bytemuck = { version = "1.10.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
pollster = "0.2.5"

enigo = "0.0.14"
image = "0.24.5"
glam = "0.23.0"
nanorand = "0.7.0"
